apply plugin: 'java'

repositories {
    mavenCentral()
}

sourceCompatibility = JavaVersion.VERSION_14
targetCompatibility = JavaVersion.VERSION_14

compileJava {
    options.compilerArgs += ["--enable-preview"]
}
compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}

dependencies {
    testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
    testImplementation ('org.hamcrest:hamcrest-library:1.3')
    testRuntimeOnly ('org.junit.jupiter:junit-jupiter-engine:5.4.2')
    testImplementation('org.mockito:mockito-core:2.21.0')
    testImplementation('org.mockito:mockito-junit-jupiter:2.23.0')
    testCompile("org.junit.jupiter:junit-jupiter-params:5.4.2")
}

test {
    jvmArgs '--enable-preview'
    useJUnitPlatform()
    testLogging {
        showStandardStreams = true
    }
}